--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,4 @@
-DirectoryIndex index.html index.php
+DirectoryIndex index.php
 ErrorDocument 404 /?page=NotFound
 php_value arg_separator.input ";"
 php_flag magic_quotes_gpc Off
